--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,18 +148,18 @@
        "4            3500.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados.head()"
+    "dados.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +173,447 @@
        "Name: Escolaridade, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dados.Escolaridade.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Estado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sexo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Idade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cor_ou_Raça</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Escolaridade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ocupação</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Faixa_de_rendimento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Rendimento_Bruto</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0\n",
+       "0               Estado\n",
+       "1                 Sexo\n",
+       "2                Idade\n",
+       "3          Cor_ou_Raça\n",
+       "4         Escolaridade\n",
+       "5             Ocupação\n",
+       "6  Faixa_de_rendimento\n",
+       "7     Rendimento_Bruto"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pd.Series(dados.columns).to_frame())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estado                  object\n",
+       "Sexo                    object\n",
+       "Idade                    int64\n",
+       "Cor_ou_Raça             object\n",
+       "Escolaridade            object\n",
+       "Ocupação                object\n",
+       "Faixa_de_rendimento     object\n",
+       "Rendimento_Bruto       float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               Regular do ensino médio ou do 2º grau\n",
+       "1                                Superior - graduação\n",
+       "2                                Superior - graduação\n",
+       "3         Regular do ensino fundamental ou do 1º grau\n",
+       "4               Regular do ensino médio ou do 2º grau\n",
+       "                             ...                     \n",
+       "175176                           Superior - graduação\n",
+       "175177                           Superior - graduação\n",
+       "175178               Especialização de nível superior\n",
+       "175179                           Superior - graduação\n",
+       "175180                           Superior - graduação\n",
+       "Name: Escolaridade, Length: 175181, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados['Escolaridade']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          5000.0\n",
+       "1          3500.0\n",
+       "2          3700.0\n",
+       "3          3300.0\n",
+       "4          3500.0\n",
+       "           ...   \n",
+       "175176     5000.0\n",
+       "175177     3500.0\n",
+       "175178    10000.0\n",
+       "175179     5000.0\n",
+       "175180     5000.0\n",
+       "Name: Rendimento_Bruto, Length: 175181, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados['Rendimento_Bruto']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rendimento_Bruto</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Escolaridade</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alfabetização de jovens e adultos</th>\n",
+       "      <td>1166.118881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo científico, clássico, etc. (médio 2º ciclo)</th>\n",
+       "      <td>3239.437500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo ginásio (médio 1º ciclo)</th>\n",
+       "      <td>2135.835387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo primário (elementar)</th>\n",
+       "      <td>1720.580989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Classe de alfabetização - CA</th>\n",
+       "      <td>993.057121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creche (disponível apenas no questionário anual de educação)</th>\n",
+       "      <td>920.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Doutorado</th>\n",
+       "      <td>11534.009063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Educação de jovens e adultos (EJA) ou supletivo do 1º grau</th>\n",
+       "      <td>1505.987119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Educação de jovens e adultos (EJA) ou supletivo do 2º grau</th>\n",
+       "      <td>1937.792736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Especialização de nível superior</th>\n",
+       "      <td>6712.481419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mestrado</th>\n",
+       "      <td>9030.926513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pré-escola</th>\n",
+       "      <td>1194.675889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Regular do ensino fundamental ou do 1º grau</th>\n",
+       "      <td>1646.163708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Regular do ensino médio ou do 2º grau</th>\n",
+       "      <td>2033.459769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Superior - graduação</th>\n",
+       "      <td>4313.732282</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Rendimento_Bruto\n",
+       "Escolaridade                                                        \n",
+       "Alfabetização de jovens e adultos                        1166.118881\n",
+       "Antigo científico, clássico, etc. (médio 2º ciclo)       3239.437500\n",
+       "Antigo ginásio (médio 1º ciclo)                          2135.835387\n",
+       "Antigo primário (elementar)                              1720.580989\n",
+       "Classe de alfabetização - CA                              993.057121\n",
+       "Creche (disponível apenas no questionário anual...        920.000000\n",
+       "Doutorado                                               11534.009063\n",
+       "Educação de jovens e adultos (EJA) ou supletivo...       1505.987119\n",
+       "Educação de jovens e adultos (EJA) ou supletivo...       1937.792736\n",
+       "Especialização de nível superior                         6712.481419\n",
+       "Mestrado                                                 9030.926513\n",
+       "Pré-escola                                               1194.675889\n",
+       "Regular do ensino fundamental ou do 1º grau              1646.163708\n",
+       "Regular do ensino médio ou do 2º grau                    2033.459769\n",
+       "Superior - graduação                                     4313.732282"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculando média para cada tipo de escolaridade \n",
+    "media_salario = dados.groupby('Escolaridade')['Rendimento_Bruto'].mean()\n",
+    "media_salario.to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rendimento_Bruto</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Escolaridade</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alfabetização de jovens e adultos</th>\n",
+       "      <td>960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo científico, clássico, etc. (médio 2º ciclo)</th>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo ginásio (médio 1º ciclo)</th>\n",
+       "      <td>1500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigo primário (elementar)</th>\n",
+       "      <td>1320.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Classe de alfabetização - CA</th>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creche (disponível apenas no questionário anual de educação)</th>\n",
+       "      <td>600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Doutorado</th>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Educação de jovens e adultos (EJA) ou supletivo do 1º grau</th>\n",
+       "      <td>1320.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Educação de jovens e adultos (EJA) ou supletivo do 2º grau</th>\n",
+       "      <td>1500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Especialização de nível superior</th>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mestrado</th>\n",
+       "      <td>6100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pré-escola</th>\n",
+       "      <td>1300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Regular do ensino fundamental ou do 1º grau</th>\n",
+       "      <td>1320.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Regular do ensino médio ou do 2º grau</th>\n",
+       "      <td>1500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Superior - graduação</th>\n",
+       "      <td>3000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Rendimento_Bruto\n",
+       "Escolaridade                                                        \n",
+       "Alfabetização de jovens e adultos                              960.0\n",
+       "Antigo científico, clássico, etc. (médio 2º ciclo)            2000.0\n",
+       "Antigo ginásio (médio 1º ciclo)                               1500.0\n",
+       "Antigo primário (elementar)                                   1320.0\n",
+       "Classe de alfabetização - CA                                   700.0\n",
+       "Creche (disponível apenas no questionário anual...             600.0\n",
+       "Doutorado                                                    10000.0\n",
+       "Educação de jovens e adultos (EJA) ou supletivo...            1320.0\n",
+       "Educação de jovens e adultos (EJA) ou supletivo...            1500.0\n",
+       "Especialização de nível superior                              5000.0\n",
+       "Mestrado                                                      6100.0\n",
+       "Pré-escola                                                    1300.0\n",
+       "Regular do ensino fundamental ou do 1º grau                   1320.0\n",
+       "Regular do ensino médio ou do 2º grau                         1500.0\n",
+       "Superior - graduação                                          3000.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculando mediana para cada tipo de escolaridade\n",
+    "mediana_salario = dados.groupby('Escolaridade')['Rendimento_Bruto'].median()\n",
+    "mediana_salario.to_frame()"
    ]
   },
   {
