--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -682,11 +682,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 19,
->>>>>>> b1f151f96a89e018139fe41051829fd444a993e6
    "metadata": {},
    "outputs": [
     {
@@ -726,32 +722,17 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": null,
-=======
-   "cell_type": "markdown",
->>>>>>> b1f151f96a89e018139fe41051829fd444a993e6
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Busca por valores aberrantes\n",
-    "Aqui será feita a busca por valores aberrantes e por amostras que possam alterar demais os resultados finais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dados de Raça"
+    "sexo_raca = dados[['Cor_ou_Raça', 'Sexo', 'Rendimento_Bruto']]"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 12,
->>>>>>> b1f151f96a89e018139fe41051829fd444a993e6
    "metadata": {},
    "outputs": [
     {
@@ -775,293 +756,117 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Cor_ou_Raça</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Parda</th>\n",
-       "      <td>81604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Branca</th>\n",
-       "      <td>73012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Preta</th>\n",
-       "      <td>18564</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Amarela</th>\n",
-       "      <td>1161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Indigena</th>\n",
-       "      <td>825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ignorado</th>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             count\n",
-       "Cor_ou_Raça       \n",
-       "Parda        81604\n",
-       "Branca       73012\n",
-       "Preta        18564\n",
-       "Amarela       1161\n",
-       "Indigena       825\n",
-       "Ignorado        15"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_raca = dados[\"Cor_ou_Raça\"]\n",
-    "df_raca.value_counts().to_frame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>Sexo</th>\n",
        "      <th>Rendimento_Bruto</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cor_ou_Raça</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Ignorado</th>\n",
-       "      <td>8521.333333</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Parda</td>\n",
+       "      <td>Homem</td>\n",
+       "      <td>5000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Amarela</th>\n",
-       "      <td>3636.186047</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Parda</td>\n",
+       "      <td>Mulher</td>\n",
+       "      <td>3500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Branca</th>\n",
-       "      <td>3452.221155</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Mulher</td>\n",
+       "      <td>3700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Parda</th>\n",
-       "      <td>2098.726129</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Parda</td>\n",
+       "      <td>Homem</td>\n",
+       "      <td>3300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Preta</th>\n",
-       "      <td>2058.074445</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Homem</td>\n",
+       "      <td>3500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Indigena</th>\n",
-       "      <td>1983.036364</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175176</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Mulher</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175177</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Mulher</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175178</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Homem</td>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175179</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Homem</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175180</th>\n",
+       "      <td>Branca</td>\n",
+       "      <td>Mulher</td>\n",
+       "      <td>5000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>175181 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Rendimento_Bruto\n",
-       "Cor_ou_Raça                  \n",
-       "Ignorado          8521.333333\n",
-       "Amarela           3636.186047\n",
-       "Branca            3452.221155\n",
-       "Parda             2098.726129\n",
-       "Preta             2058.074445\n",
-       "Indigena          1983.036364"
+       "       Cor_ou_Raça    Sexo  Rendimento_Bruto\n",
+       "0            Parda   Homem            5000.0\n",
+       "1            Parda  Mulher            3500.0\n",
+       "2           Branca  Mulher            3700.0\n",
+       "3            Parda   Homem            3300.0\n",
+       "4           Branca   Homem            3500.0\n",
+       "...            ...     ...               ...\n",
+       "175176      Branca  Mulher            5000.0\n",
+       "175177      Branca  Mulher            3500.0\n",
+       "175178      Branca   Homem           10000.0\n",
+       "175179      Branca   Homem            5000.0\n",
+       "175180      Branca  Mulher            5000.0\n",
+       "\n",
+       "[175181 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rend_raca = dados.groupby(\"Cor_ou_Raça\")[\"Rendimento_Bruto\"]\n",
-    "media_raca = rend_raca.mean().sort_values(ascending=False)\n",
-    "media_raca.to_frame()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dados de Sexo"
-   ]
-  },
-  {
-<<<<<<< HEAD
-=======
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sexo</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Homem</th>\n",
-       "      <td>102907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mulher</th>\n",
-       "      <td>72274</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         count\n",
-       "Sexo          \n",
-       "Homem   102907\n",
-       "Mulher   72274"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados[\"Sexo\"].value_counts().to_frame()"
+    "sexo_raca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rendimento_Bruto</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sexo</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Homem</th>\n",
-       "      <td>2876.170941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mulher</th>\n",
-       "      <td>2373.349005</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Rendimento_Bruto\n",
-       "Sexo                    \n",
-       "Homem        2876.170941\n",
-       "Mulher       2373.349005"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sexo = dados.groupby(\"Sexo\")[\"Rendimento_Bruto\"]\n",
-    "media_sexo = df_sexo.mean()\n",
-    "media_sexo.to_frame()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Remoção de valores aberrantes\n",
-    "\n",
-    "Baseado na análise dos valores de rendimento bruto separado em sexo e raça, foi decidido remover os valores que marcaram \"Ignorado\" na coluna \"Cor_ou_Raça\", uma vez que esses representam uma parte muito pequena da quantidade total de dados, mas possuem uma média muito elevada de Rendimento Bruto"
-   ]
-  },
-  {
->>>>>>> b1f151f96a89e018139fe41051829fd444a993e6
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1312,7 +1117,8 @@
     "\n",
     "#### Faixa de rendimento\n",
     "\n",
-    "- kdkbobd"
+    "- kdkbobd\n",
+    "- vkals"
    ]
   },
   {
